--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,34 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<!-- Basic Favicon -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/logo.svg" />
+		
+		<!-- Multiple sizes for better browser support -->
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32.png" />
+		
+		<!-- Apple Touch Icons -->
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="%sveltekit.assets%/apple-touch-icon-152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon-180.png" />
+		
+		<!-- PWA Manifest -->
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		
+		<!-- Theme Color (moss-600) -->
+		<meta name="theme-color" content="#567d56" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-title" content="Communize" />
+		
+		<!-- Microsoft Tiles -->
+		<meta name="msapplication-TileColor" content="#567d56" />
+		<meta name="msapplication-TileImage" content="%sveltekit.assets%/ms-tile-144.png" />
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
