Fix manifest.json and app.html

--- a/src/app.html
+++ b/src/app.html
@@ -22,13 +22,13 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		
 		<!-- Theme Color (moss-600) -->
-		<meta name="theme-color" content="#567d56" />
+		<meta name="theme-color" content="#60a5fa" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<meta name="apple-mobile-web-app-title" content="Communize" />
 		
 		<!-- Microsoft Tiles -->
-		<meta name="msapplication-TileColor" content="#567d56" />
+		<meta name="msapplication-TileColor" content="#60a5fa" />
 		<meta name="msapplication-TileImage" content="%sveltekit.assets%/ms-tile-144.png" />
 		
 		%sveltekit.head%
